--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql:///vue?useSSL=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+pagehelper.helper-dialect=mysql
